# intisync-server

./: Cargo.toml  Makefile.toml  README.md  Shuttle.toml  bacon.toml  compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
config/: .env.dist.ci  .env.dist.dev  .env.dist.test
src/: actors.rs  configuration.rs  main.rs  sessions.rs
src/actors/: controller.rs  hub.rs  toy.rs
src/actors/controller/: handlers.rs  messages.rs
src/actors/hub/: handlers.rs  messages.rs
src/actors/toy/: handlers.rs
src/sessions/: port.rs
src/sessions/adapters/: redis.rs
src/sessions/adapters/redis/: pool.rs
src/socket/: port.rs
src/socket/adapters/: local.rs
