[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
config = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
socketioxide = { version = "0.10.2", features = ["extensions", "state"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
mobc = "0.8.3"
mobc-redis = "0.8.2"
serde_json = "1.0.113"

[dev-dependencies]
mockall = "0.12.1"
