[package]
name = "intisync-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
socketioxide = { version = "0.10.2", features = ["extensions", "state"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0.114"
deadpool = "0.10.0"
deadpool-redis = { version = "0.14.0", features = ["serde"] }
redis = { version = "0.25.0", default-features = false, features = [
  "tokio-rustls-comp",
] }
shuttle-runtime = "0.40.0"
shuttle-axum = "0.41.0"
shuttle-secrets = "0.41.0"
dotenvy = "0.15.7"

[dev-dependencies]
futures-util = "0.3.30"
mockall = "0.12.1"
test-context = "0.3.0"
